# Bluebubbles-Py

./: .gitignore  BUILD.md  BlueBubbles.postman_collection.json  Cargo.toml  LICENSE  MANIFEST.in  PACKAGING-SUMMARY.md  README.md  bluebubbles.desktop  com.github.bluebubbles.client.desktop  com.github.bluebubbles.client.metainfo.xml  com.github.bluebubbles.client.yml  main.py  requirements.txt  setup.py  test-packaging.sh
.github/workflows/: build-packages.yml  flatpak.yml
src/: app.rs  application.py  main.rs  storage.rs  utils.rs
src/api/: client.py  client.rs  events.rs  mod.rs  models.rs
src/config/: manager.py
src/db/: __init__.py  manager.py  models.py
src/models/: data.py
src/services/: __init__.py  attachment_cache.py  avatar_cache.py  chat_service.py
src/ui/: chat_view.rs  login.rs  login_window.py  main_window.py  main_window.rs  mod.rs  new_chat_dialog.py  preferences_dialog.py  sidebar.rs  styles.css
