[package]
name = "bluebubbles-gtk"
version = "0.1.0"
edition = "2024"
authors = ["Thomas Bassi <t.bassi@mercurio.moe>"]
description = "A minimal BlueBubbles GTK client."
license = "MIT"

[dependencies]
gtk4 = { version = "0.8", package = "gtk4" }
adw = { version = "0.6", package = "libadwaita" }
glib = "0.18"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }
thiserror = "1.0"
log = "0.4"
url = "2.5"
once_cell = "1.19"
directories = "5"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
